<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imagebook"
            android:layout_width="53dp"
            android:layout_height="75dp"
            android:contentDescription="@string/detailPageLink"
            android:scaleType="fitStart"
            android:src="@drawable/testimg" />

        <!-- 題名 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/title"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/labelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TestText"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>
        <!-- 著者名 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/author"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/labelAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TestText"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>
        <!-- キンドル化されてる？ -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/IsKindl"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/labelIsKindl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TestText"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>
        <!-- リンク表示 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/detailPageLink"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/labeldetailPageLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TestText"
                android:textSize="20sp"
                android:autoLink="web" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40" >

        <LinearLayout
            android:id="@+id/sublayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <!-- EAN -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/EAN"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelEAN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- EANList -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/EANList"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelEANList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- ListPrice -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ListPrice"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelListPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- NumberOfPages -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/NumberOfPages"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelNumberOfPages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- PublicationDate -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/PublicationDate"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelPublicationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- Publisher -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Publisher"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelPublisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- ReleaseDate -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ReleaseDate"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
            <!-- Studio -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Studio"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:id="@+id/labelStudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/TestText"
                    android:textSize="20sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>